[gd_scene load_steps=3 format=3 uid="uid://m1xjxl4ma3sv"]

[ext_resource type="Script" path="res://prog_122c.gd" id="1_x8rvh"]
[ext_resource type="Theme" uid="uid://os4yjvatm7cf" path="res://Button.tres" id="2_jij40"]

[node name="Prog122C" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x8rvh")

[node name="Calc" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 502.0
offset_right = 324.0
offset_bottom = 651.0
theme = ExtResource("2_jij40")
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 500.0
offset_right = 772.0
offset_bottom = 655.0
theme = ExtResource("2_jij40")
text = "Clear"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 857.0
offset_top = 498.0
offset_right = 1157.0
offset_bottom = 651.0
theme = ExtResource("2_jij40")
text = "Quit"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 503.0

[connection signal="pressed" from="Calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
